--- a/db_pages/db_6.html
+++ b/db_pages/db_6.html
@@ -2,8 +2,8 @@
 <html>
 <title>PUFF DB</title>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="css/css_main.css">
-<link rel="stylesheet" href="css/gradient_animate.css">
+<link rel="stylesheet" href="../css/css_main.css">
+<link rel="stylesheet" href="../css/gradient_animate.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 
@@ -27,7 +27,7 @@
           <div class='input-fields'>
             <form action="hehe" method="post" accept-charset="utf-8">
               <input type='text' placeholder='Request' class='input-line' name="username"></input>
-              <INPUT type="image" src="img/send.png" value="" class="btn-send" ></INPUT>
+              <INPUT type="image" src="../img/send.png" value="" class="btn-send" ></INPUT>
             </form>
           </div>
           <div class="hey">
@@ -179,13 +179,13 @@
       </div>
     </div>
     <div class="nav-bar">
-      <a href="db_main.html" class="nav-btn">M</a>
-      <a href="db_pages/db_1.html"  class="nav-btn">1</a>
-      <a href="db_pages/db_2.html"  class="nav-btn">2</a>
-      <a href="db_pages/db_3.html"  class="nav-btn">3</a>
-      <a href="db_pages/db_4.html"  class="nav-btn">4</a>
-      <a href="db_pages/db_5.html"  class="nav-btn">5</a>
-      <a href="db_pages/db_6.html"  class="nav-btn">6</a>
+      <a href="../db_main.html" class="nav-btn">M</a>
+      <a href="db_1.html"  class="nav-btn">1</a>
+      <a href="db_2.html"  class="nav-btn">2</a>
+      <a href="db_3.html"  class="nav-btn">3</a>
+      <a href="db_4.html"  class="nav-btn">4</a>
+      <a href="db_5.html"  class="nav-btn">5</a>
+      <a href="db_6.html"  class="nav-btn">6</a>
     </div>
   </div>
 </body>
