--- a/db_pages/db_3.html
+++ b/db_pages/db_3.html
@@ -23,13 +23,7 @@
         <button class='disconnect-btn' type="submit" value="Submit">Logout</button>
       </div>
         <div class='content'>
-          <div class='title-db'>Main</div>
-          <div class='input-fields'>
-            <form action="hehe" method="post" accept-charset="utf-8">
-              <input type='text' placeholder='Request' class='input-line' name="username"></input>
-              <INPUT type="image" src="../img/send.png" value="" class="btn-send" ></INPUT>
-            </form>
-          </div>
+          <div class='title-db'>Request 3</div>
           <div class="hey">
             <div class="text-response">500 results in 0.25 sec</div>
             <div class="request-response">
