--- a/db_pages/db_5.html
+++ b/db_pages/db_5.html
@@ -25,12 +25,6 @@
       </div>
         <div class='content'>
           <div class='title-db'>Request 5</div>
-          <div class='input-fields'>
-            <form action="hehe" method="post" accept-charset="utf-8">
-              <input type='text' placeholder='Request' class='input-line' name="username"></input>
-              <INPUT type="image" src="../img/send.png" value="" class="btn-send" ></INPUT>
-            </form>
-          </div>
           <div class="hey">
             <div class="text-response">500 results in 0.25 sec</div>
             <div class="request-response">
@@ -58,7 +52,7 @@
               </table>
             </div>
             <div class="graph-response">
-              
+              GRAPHIQUE
             </div>
           </div>
       </div>
