Ajout du fichier de db

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div class='welcome'>CoviDB</div>
             <div class='input-fields'>
               <form action="register.php" method="post" accept-charset="utf-8">
-                <input type='text' placeholder='Username' class='input-line full-width' name="username"></input>
-                <input type='email' placeholder='Email' class='input-line full-width' name="email"></input>
-                <input type='password' placeholder='Password' class='input-line full-width' name="password"></input>
+                <input type='text' placeholder='Username' class='input-line full-width' name="username" autocomplete="off"></input>
+                <input type='email' placeholder='Email' class='input-line full-width' name="email" autocomplete="off"></input>
+                <input type='password' placeholder='Password' class='input-line full-width' name="password" autocomplete="off"></input>
                 <div><button class='register-btn full-width' type="submit" value="Submit">Register</button></div>
               </form>
             </div>
@@ -35,8 +35,8 @@
           <div class='content'>
             <div class='welcome'>CoviDB</div>
               <form action="login.php" method="post" accept-charset="utf-8">
-                <input type='text' placeholder='Username' class='input-line full-width' name="username"></input>
-                <input type='password' placeholder='Password' class='input-line full-width' name="password"></input>
+                <input type='text' placeholder='Username' class='input-line full-width' name="username" autocomplete="off"></input>
+                <input type='password' placeholder='Password' class='input-line full-width' name="password" autocomplete="off"></input>
                 <div><button class='register-btn full-width' type="submit" value="Submit">login</button></div>
               </form>
           <span class='error-txt'>already exist</span>
