--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class='welcome'>CoviDB</div>
             <div class='input-fields'>
               <form action="login.php" method="post" accept-charset="utf-8">
-                <input type='text' placeholder='Username' class='input-line full-width' name="username" autocomplete="off"></input>
-                <input type='password' placeholder='Password' class='input-line full-width' name="password" autocomplete="off"></input>
+                <input type='text' placeholder='Username' class='input-line full-width' name="username"></input>
+                <input type='password' placeholder='Password' class='input-line full-width' name="password"></input>
                 <div><button class='register-btn full-width' type="submit" value="Submit">login</button></div>
               </form>
             </div>
