--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class='content'>
             <div class='welcome'>CoviDB</div>
             <div class='input-fields'>
-              <form action="register.php" method="post" accept-charset="utf-8">
+              <form action="src/register.php" method="post" accept-charset="utf-8">
                 <input type='text' placeholder='Last name' class='input-line full-width' name="name" autocomplete="off"></input>
                 <input type='text' placeholder='First name' class='input-line full-width' name="firstname" autocomplete="off"></input>
                 <input type='text' placeholder='Username' class='input-line full-width' name="username" autocomplete="off"></input>
@@ -43,7 +43,7 @@
           <div class='content'>
             <div class='welcome'>CoviDB</div>
             <div class='input-fields'>
-              <form action="login.php" method="post" accept-charset="utf-8">
+              <form action="src/login.php" method="post" accept-charset="utf-8">
                 <input type='text' placeholder='Username' class='input-line full-width' name="username"></input>
                 <input type='password' placeholder='Password' class='input-line full-width' name="password"></input>
                 <div><button class='register-btn full-width' type="submit" value="Submit">login</button></div>
