register pour epidemiologiste fonctionne pas

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
           <div class='content'>
             <div class='welcome'>CoviDB</div>
             <div class='input-fields'>
-              <form action="register.php" method="post" accept-charset="utf-8">
+              <form action="src/register.php" method="post" accept-charset="utf-8">
                 <input type='text' placeholder='Last name' class='input-line full-width' name="name" autocomplete="off"></input>
                 <input type='text' placeholder='First name' class='input-line full-width' name="firstname" autocomplete="off"></input>
                 <input type='text' placeholder='Username' class='input-line full-width' name="username" autocomplete="off"></input>
                 <input type='text' placeholder='Address' class='input-line full-width' name="address" autocomplete="off"></input>
                 <input type='password' placeholder='Password' class='input-line full-width' name="password" autocomplete="off"></input>
                 <label class="container"><span class="checkspan">Epidémiologiste</span>
-                  <input type="checkbox" >
+                  <input type="checkbox" name="isEpidemiologist">
                   <span class="checkmark"></span>
                 </label>
                 <input type='text' placeholder='Center' class='input-line full-width options' name="center" autocomplete="off"></input>
