--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <form action="src/login.php" method="post" accept-charset="utf-8">
                 <input type='text' placeholder='Username' class='input-line full-width' name="username"></input>
                 <input type='password' placeholder='Password' class='input-line full-width' name="password"></input>
-                <div><button class='register-btn full-width' type="submit" value="Submit">login</button></div>
+                <div><button class='register-btn full-width' type="submit" name="submit_login" value="Submit">login</button></div>
               </form>
             </div>
           <span class='error-txt'>already exist</span>
